--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "packageManager": "pnpm@8.6.3",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "sass": "^1.64.1",
     "vitepress": "1.0.0-beta.5"
   }
 }
