--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "sass": "^1.64.1",
     "vitepress": "1.0.0-beta.5"
+  },
+  "dependencies": {
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1"
   }
 }
