--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
@@ -16,11 +17,12 @@
   "devDependencies": {
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "sass": "^1.64.1",
-    "vitepress": "1.0.0-beta.5"
+    "vitepress": "1.0.0-rc.4"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
     "gsap": "^3.12.2",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "vue": "^3.3.4"
   }
 }
